--- a/.gitignore
+++ b/.gitignore
@@ -98,5 +98,10 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# IntelliJ project files
+.idea
 *.iml
-.idea/*
+out
+gen
+
+target
