--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.hjg.network</groupId>
     <artifactId>netty</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>demo1</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
