--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>demo1</module>
+        <module>bio1</module>
     </modules>
 
     <properties>
