--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>nio1</module>
         <module>nia-ch6</module>
         <module>nia-ch8</module>
+        <module>nia-ch9</module>
     </modules>
 
     <properties>
